--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^5.0.0-alpha.37",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@react-hook/resize-observer": "^1.2.2",
     "@stripe/react-stripe-js": "^1.4.0",
     "@stripe/stripe-js": "^1.13.1",
     "@testing-library/jest-dom": "^5.11.9",
@@ -13,6 +14,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "human-time": "0.0.2",
     "marked": "^2.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
